Fix GShapefile, add building loader, etc.
- Fix GShapefile
update Variant class.
- add building loader
implement a simple box-shape building for now.
- update building shapefile.

--- a/SimpleCities/MainWindow.ui
+++ b/SimpleCities/MainWindow.ui
@@ -38,6 +38,7 @@
     <addaction name="actionSaveTerrain"/>
     <addaction name="separator"/>
     <addaction name="actionLoadParcels"/>
+    <addaction name="actionLoadBuildings"/>
     <addaction name="separator"/>
     <addaction name="actionLoadRoads"/>
     <addaction name="actionSaveRoads"/>
@@ -219,6 +220,11 @@
   <action name="actionLoadParcels">
    <property name="text">
     <string>Load Parcels</string>
+   </property>
+  </action>
+  <action name="actionLoadBuildings">
+   <property name="text">
+    <string>Load Buildings</string>
    </property>
   </action>
  </widget>
