--- a/SimpleCities/ScenarioGenerationDialog.ui
+++ b/SimpleCities/ScenarioGenerationDialog.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>544</width>
-    <height>571</height>
+    <height>634</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -17,7 +17,7 @@
    <property name="geometry">
     <rect>
      <x>330</x>
-     <y>530</y>
+     <y>590</y>
      <width>91</width>
      <height>31</height>
     </rect>
@@ -30,7 +30,7 @@
    <property name="geometry">
     <rect>
      <x>440</x>
-     <y>530</y>
+     <y>590</y>
      <width>91</width>
      <height>31</height>
     </rect>
@@ -174,7 +174,7 @@
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>130</y>
+     <y>200</y>
      <width>521</width>
      <height>111</height>
     </rect>
@@ -351,7 +351,7 @@
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>250</y>
+     <y>320</y>
      <width>521</width>
      <height>171</height>
     </rect>
@@ -669,7 +669,7 @@
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>430</y>
+     <y>500</y>
      <width>521</width>
      <height>81</height>
     </rect>
@@ -721,29 +721,6 @@
     </property>
     <property name="text">
      <string>~</string>
-    </property>
-   </widget>
-   <widget class="QLineEdit" name="lineEditNumStoriesDev">
-    <property name="geometry">
-     <rect>
-      <x>430</x>
-      <y>20</y>
-      <width>71</width>
-      <height>20</height>
-     </rect>
-    </property>
-   </widget>
-   <widget class="QLabel" name="label_35">
-    <property name="geometry">
-     <rect>
-      <x>370</x>
-      <y>20</y>
-      <width>51</width>
-      <height>21</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Std Dev:</string>
     </property>
    </widget>
    <widget class="QLabel" name="label_36">
@@ -806,6 +783,55 @@
     </property>
    </widget>
   </widget>
+  <widget class="QLineEdit" name="lineEditSimulatorDirectory">
+   <property name="geometry">
+    <rect>
+     <x>130</x>
+     <y>160</y>
+     <width>361</width>
+     <height>20</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_28">
+   <property name="geometry">
+    <rect>
+     <x>20</x>
+     <y>160</y>
+     <width>101</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Simulator directory:</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="pushButtonSimulatorDirectory">
+   <property name="geometry">
+    <rect>
+     <x>500</x>
+     <y>160</y>
+     <width>31</width>
+     <height>23</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>...</string>
+   </property>
+  </widget>
+  <widget class="QCheckBox" name="checkBoxUseSimulator">
+   <property name="geometry">
+    <rect>
+     <x>20</x>
+     <y>140</y>
+     <width>101</width>
+     <height>17</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Use simulator</string>
+   </property>
+  </widget>
  </widget>
  <tabstops>
   <tabstop>lineEditZone</tabstop>
@@ -834,7 +860,6 @@
   <tabstop>lineEditSetbackSideMax</tabstop>
   <tabstop>lineEditNumStoriesMin</tabstop>
   <tabstop>lineEditNumStoriesMax</tabstop>
-  <tabstop>lineEditNumStoriesDev</tabstop>
   <tabstop>lineEditMinBuildingDimMin</tabstop>
   <tabstop>lineEditMinBuildingDimMax</tabstop>
   <tabstop>pushButtonOK</tabstop>
